--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap");
     </style>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -30,7 +30,6 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
-    <div class="container">
       <!-- Timeblocks go here -->
       <div class="row time-block">
         <div class="hour col-2">9am</div>
@@ -43,7 +42,7 @@
         <button class="saveBtn col-2">save</button>
       </div>
       <div class="row time-block">
-        <div class="hour col-2"></div>11am</div>
+        <div class="hour col-2">11am</div>
         <textarea name="" id="" cols="30" rows="10" class="col-8"></textarea>
         <button class="saveBtn col-2">save</button>
       </div>
