my third commit

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap");
     </style>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./Module_5_Challenge/style.css" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -33,12 +33,12 @@
       <!-- Timeblocks go here -->
       <div class="row time-block">
         <div class="hour col-2">9am</div>
-        <textarea name="" id="" cols="30" rows="10" class="col-8"></textarea>
+        <textarea name="" id="" cols="" rows="10" class="col-8"></textarea>
         <button class="saveBtn col-2">save</button>
       </div>
       <div class="row time-block">
         <div class="hour col-2">10am</div>
-        <textarea name="" id="" cols="30" rows="10" class="col-8"></textarea>
+        <textarea name="10am" id="" cols="30" rows="10" class="col-8"></textarea>
         <button class="saveBtn col-2">save</button>
       </div>
       <div class="row time-block">
@@ -72,7 +72,7 @@
         <button class="saveBtn col-2">save</button>
       </div>
     </div>
-    <script src="./script.js"></script>
+    <script src="./Module_5_Challenge/script.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   </body>
